src/objects/Flow__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <description>Different types of flows to fill out appropriate questionnaires.</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Recruitment</fullName>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
                <value>
                    <fullName>Partner Survey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_URL__c</fullName>
        <description>Select the Community that this flow is associated to.  You can find your community URL by going to Setup&gt;&gt;All Communities .  Copy/Paste the URL from the appropriate community.</description>
        <inlineHelpText>Select the Community that this flow is associated to.  You can find your community URL by going to Setup&gt;&gt;All Communities .  Copy/Paste the URL from the appropriate community.</inlineHelpText>
        <label>Community URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Start_Page__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A questionnaire must have a start page in order for a lead to be assigned to it.</inlineHelpText>
        <label>Start Page</label>
        <referenceTo>FlowPage__c</referenceTo>
        <relationshipLabel>Questionnaires</relationshipLabel>
        <relationshipName>Flows_With_Start_Page</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Questionnaire</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Questionnaire Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questionnaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>